# django-abstract

./: MANIFEST.in  README.md  pyproject.toml
.github/: FUNDING.yml
src/django_abstract/: apps.py  base_abstract_view.py  base_creator.py  base_dependency.py  base_exception.py  base_form.py  base_model.py  base_operator.py  base_operator_service.py  base_selector.py  exceptions.py  models.py  registry.py  signals.py  utilities.py
src/django_abstract/client/: dependencies.py  models.py  tasks.py  utilities.py
src/django_abstract/client/middleware/: guest_mode_middleware.py
src/django_abstract/client/selectors/: select_dependency.py  selectors.py
src/django_abstract/client/services/: client_services.py  create_dependency.py  creators.py  session_service.py
src/django_abstract/client/services/client_systems/guest_ecosystem/: guestmode.py  (+1 more)
src/django_abstract/generic/: generic_creators.py  generic_selectors.py
src/django_abstract/log/: dependencies.py  models.py  utilities.py
src/django_abstract/log/middlewares/: activity_middleware.py
src/django_abstract/log/selectors/: selectors.py  selectors_dependency.py
src/django_abstract/log/services/: creators.py  creators_dependency.py
src/django_abstract/migrations/: 0001_initial.py  0002_alter_systemerrorlog_reported_by.py  0003_systemerrorlog_method_name.py  0004_abstractbanneduser_is_deactivated_and_more.py  0005_abstractguestidentity_abstractsessionlink_and_more.py  0006_alter_abstractsessionmetrics_start_time.py
src/django_abstract/services/: toggle_service.py
tests/: test_logging_middleware.py
(+4 files in other folders)
