[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-abstract"
version = "1.0.0"
authors = [
  { name="Youness Mojahid", email="mojahidyouness0@gmail.com" },
]
description = "A django app, that ofers abstracted logic for Django."
readme = "README.md"
requires-python = ">=3.9"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 6.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "django>=5.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/django_abstract"]